--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,7 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
 
+    maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
     maven { url = "https://mymaven.bylazar.com/releases" }
 }
@@ -19,7 +20,9 @@ dependencies {
     implementation 'com.pedropathing:ftc:2.0.0'
     implementation 'com.pedropathing:telemetry:0.0.6'
 
-    implementation 'com.bylazar:fullpanels:1.0.2'
+    implementation 'com.bylazar:fullpanels:1.0.4'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 }
 
