--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,11 +1,14 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/' }
     maven { url = 'https://maven.pedropathing.com' }
     maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
 dependencies {
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
     implementation 'org.firstinspires.ftc:Inspection:11.0.0'
     implementation 'org.firstinspires.ftc:Blocks:11.0.0'
     implementation 'org.firstinspires.ftc:RobotCore:11.0.0'
