--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ android.useAndroidX=true
 # We no longer need to auto-convert third-party libraries to use AndroidX, which slowed down the build
 android.enableJetifier=false
 
-# Allow Gradle to use up to 1 GB of RAM
-org.gradle.jvmargs=-Xmx1024M
+# Allow Gradle to use up to 1 GB of RAM //now 4
+org.gradle.jvmargs=-Xmx4048M
 
 android.nonTransitiveRClass=false
