very bad PID for rotation due 2 2 servos, decent camera detection for limelight, lincluded ftc lib

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -31,5 +31,7 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
 
+    implementation 'org.ftclib.ftclib:core:2.1.1' //lib of libs
+
     //implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
 }
