--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -19,6 +19,8 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
     implementation 'com.pedropathing:ftc:2.0.1'
     implementation 'com.pedropathing:telemetry:0.0.6'
     implementation 'com.bylazar:fullpanels:1.0.0'
