turret is very broken at rotation but shoots good without it, RoadRunner implemented for its geometry

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -33,5 +33,9 @@ dependencies {
 
     implementation 'org.ftclib.ftclib:core:2.1.1' //lib of libs
 
+    //road runner stuff
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+
     //implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
 }
