(hopefully successful) migration to pedro v1

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -3,7 +3,6 @@ repositories {
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
     maven { url = 'https://maven.pedropathing.com' }
-    maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
 dependencies {
@@ -20,8 +19,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
-    implementation 'com.pedropathing:ftc:2.0.6'
-    implementation 'com.pedropathing:telemetry:1.0.0'
-    implementation 'com.bylazar:fullpanels:1.0.9'
+    implementation 'com.pedropathing:pedro:1.0.9'
 }
 
