measured times and made a lot of fixes inclding Pedro v2 will beggin risky logic

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -3,11 +3,10 @@ repositories {
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
     maven { url = 'https://maven.pedropathing.com' }
+    maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
 dependencies {
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
-
     implementation 'org.firstinspires.ftc:Inspection:11.1.0'
     implementation 'org.firstinspires.ftc:Blocks:11.1.0'
     implementation 'org.firstinspires.ftc:RobotCore:11.1.0'
@@ -18,7 +17,10 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:11.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
-    implementation 'com.pedropathing:pedro:1.0.9'
+    implementation "com.acmerobotics.dashboard:dashboard:0.5.1"
+
+    implementation 'com.pedropathing:ftc:2.0.6'
+    implementation 'com.pedropathing:telemetry:1.0.0'
+    implementation 'com.bylazar:fullpanels:1.0.9'
 }
 
